# lazyprune

./: .gitignore  Cargo.toml  LICENSE  README.md  config.default.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-03-20-ports-mode.md
docs/superpowers/specs/: 2026-03-20-ports-mode-design.md
src/: app.rs  config.rs  main.rs  ports.rs  scanner.rs  targets.rs
src/ui/: details.rs  layout.rs  list.rs  mod.rs  popup.rs  ports_details.rs  ports_list.rs
